[tool.poetry]
name = "Tomography Archival Management System"
version = "0.1.1"
description = "Makes storing and accessing tomographic data easy and quick."
license = "MIT"
authors = [
    "Tom Kusonsuphanimit <tom.kusonsuphanimit@manchester.ac.uk>"
]
readme = "README.md"
repository = "https://github.com/UoM-NXCT/TAMS"
documentation = "https://tams-nxct.readthedocs.io/"

[tool.poetry.urls]
"NXCT homepage" = "https://nxct.ac.uk/"
"The University of Manchester homepage" = "https://www.manchester.ac.uk/"

[tool.poetry.dependencies]
python = "<3.12,^3.11,"
PySide6 = "^6.4.0"
psycopg = {extras = ["binary"], version = "^3.1.4"}
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
pylint = "^2.15.5"
pytest = "^7.1.3"
isort = "^5.10.1"
mypy = "^0.982"
sqlfluff = "^1.4.1"
ssort = "^0.11.6"
pyinstaller = "^5.7.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.pylint.MASTER]
py-version = "3.10"
extension-pkg-whitelist = "PySide6"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 88
disable = """
    invalid-name
"""

[tool.pytest.ini_options]
qt_api = "pyside6"

[[tool.mypy.overrides]]
module = "tomllib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PySide6"
ignore_errors = true

[tool.isort]
profile = "black"

[tool.sqlfluff.core]
dialect = "postgres"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
