[tool.poetry]
name = "Tomography Archival Management System"
version = "0.2.0"
description = "Makes storing and accessing tomographic data easy and quick."
license = "MIT"
authors = [
    "Tom Kuson <mail@tjkuson.me>"
]
readme = "README.md"
repository = "https://github.com/UoM-NXCT/TAMS"
documentation = "https://tams-nxct.readthedocs.io/"

[tool.poetry.urls]
"NXCT homepage" = "https://nxct.ac.uk/"
"The University of Manchester homepage" = "https://www.manchester.ac.uk/"

[tool.poetry.dependencies]
python = "<3.12,^3.11,"
PySide6 = "^6.4.1"
psycopg = {extras = ["binary"], version = "^3.1.4"}
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23"
pytest = "^7.2.2"
mypy = "^1.1.1"
sqlfluff = "^1.4.1"
ssort = "*"
pyinstaller = "^5.9.0"
ruff = "^0.0.259"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
qt_api = "pyside6"

[[tool.mypy.overrides]]
module = "tomllib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PySide6"
ignore_errors = true

[tool.sqlfluff.core]
dialect = "postgres"
exclude_rules = "L016"

[tool.ruff]
select = ["E", "F", "I", "N", "D", "UP", "ANN", "S", "BLE", "B", "A", "C4", "DTZ", "DJ", "EM", "ISC", "G", "PIE", "PT", "RET", "SIM", "TID", "TCH", "ARG", "PD", "PL", "TRY", "NPY", "RUF"]
line-length = 88
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
