[tool.poetry]
name = "Tomography Archival Management System"
version = "0.1.2"
description = "Makes storing and accessing tomographic data easy and quick."
license = "MIT"
authors = [
    "Tom Kuson <mail@tjkuson.me>"
]
readme = "README.md"
repository = "https://github.com/UoM-NXCT/TAMS"
documentation = "https://tams-nxct.readthedocs.io/"

[tool.poetry.urls]
"NXCT homepage" = "https://nxct.ac.uk/"
"The University of Manchester homepage" = "https://www.manchester.ac.uk/"

[tool.poetry.dependencies]
python = "<3.12,^3.11,"
PySide6 = "^6.5.0"
psycopg = {extras = ["binary"], version = "^3.1.4"}
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23"
pylint = "^2.17.4"
pytest = "^7.2.2"
isort = "^5.10.1"
mypy = "^1.1.1"
sqlfluff = "^1.4.1"
ssort = "*"
pyinstaller = "^5.9.0"
pyupgrade = "^3.3.0"
flake8 = "^6.0.0"
flake8-type-checking = "^2.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pylint.MASTER]
py-version = "3.11"
extension-pkg-whitelist = "PySide6"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 88
disable = """
    invalid-name
"""

[tool.pytest.ini_options]
qt_api = "pyside6"

[[tool.mypy.overrides]]
module = "tomllib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PySide6"
ignore_errors = true

[tool.isort]
profile = "black"

[tool.sqlfluff.core]
dialect = "postgres"
exclude_rules = "L016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
